# minicc

./: README.md  main.py  pyproject.toml
llmdoc/: index.md
llmdoc/architecture/: modules.md
llmdoc/overview/: project.md
minicc/: __init__.py  agent.py  app.py  config.py  schemas.py  tools.py
minicc/core/: __init__.py  agent.py  log.py  models.py  runtime.py
minicc/prompts/: system.md
minicc/tools/: shell.py  task.py
minicc/tui/: app.py  styles.tcss  widgets.py
minicc/ui/: __init__.py  styles.tcss  widgets.py
