[project]
name = "minicc"
version = "0.1.0"
description = "Mini Claude Code - 极简教学版 AI 编程助手"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "DJJ", email = "shuaiqijianhao@qq.com" }]
keywords = ["ai", "agent", "claude", "coding-assistant", "tui", "pydantic-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textual[syntax]>=6.6.0",
    "pydantic-ai>=1.24.0",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/TokenRollAI/miniCC"
Repository = "https://github.com/TokenRollAI/miniCC"
Issues = "https://github.com/TokenRollAI/miniCC/issues"

[project.scripts]
minicc = "minicc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["build>=1.3.0", "twine>=6.2.0"]
